--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Finland -- Civilization'
 - !lcc 'DK'
+- GITenberg
 title: 'Kansallista itsetutkistelua: Suomalaisia kulttuuri-ääriviivoja'
 url: http://www.gutenberg.org/ebooks/15440
